# cairo-staticlib

./: Cargo.toml  README.md  build.rs  generate-bindings
cairo-1.15.8/: ChangeLog  configure
cairo-1.15.8/doc/public/html/: cairo-Image-Surfaces.html  cairo-PDF-Surfaces.html  index-1.10.html  index-1.12.html  index-1.14.html  index-1.2.html  index-1.4.html  index-1.6.html  index-1.8.html  index-all.html  index.html
cairo-1.15.8/doc/public/tmpl/: cairo-unused.sgml
cairo-1.15.8/doc/public/xml/: api-index-1.16.xml  api-index-full.xml  cairo-pdf.xml  cairo-png.xml  cairo-ps.xml  cairo-surface.xml  cairo-svg.xml
examples/: cairo-version.rs  rectangles.rs
src/: bindings.rs  cairo-all.h  lib.rs
